--- a/css/master.css
+++ b/css/master.css
@@ -1,22 +1,16 @@
-/* Cascading stylesheet for the website */
+  a { color: blue; /* Color del texto */
+      text-decoration: none; /* Con esto los links no estaran subrayados */
+    }
 
-/* Text inside these asterisks and slashes are comments for human */
-
-  a {
-    color: blue; /* set the text color to blue here */
-    text-decoration: none; /* This means we do not want hyperlinks to be underlined */
-  }
-
-  a:hover {
-    color: red; /* set the text color to red here */
-    text-decoration: none; /* This means we do not want hyperlinks to be underlined */
-  }
+  a:hover { color: red; 
+            text-decoration: none; 
+          }
 
   body {
-    background-color: beige; /* set the background color here */
-    color: black; /* set the text color to black here */
-    font-family: Arial, Helvetica, sans-serif;  /* set the font here */
-    text-align: center; /* set the text alignment here */
+    background-color: beige; /* color de toda la página */
+    color: black; /* Color del texto */
+    font-family: Arial, Helvetica, sans-serif;  /* la fuente */
+    text-align: center; /* la alineación del texto */
    }
 
   footer {
@@ -30,8 +24,8 @@
    }
 
   h2 {
-    color: #075AAB; /* set the text color of to #075AAB here */
-    /* set both the bottom margin and top margin to 2.5rem here */
+    color: #075AAB; /* Color para el encabezado h2 */
+    /* las margenes para el encabezado h2, bottom es fondo y top es arriba */
     margin-bottom: 2.5rem;
     margin-top: 2.5rem;
    }
